Added Get org_id by name
